# adventofcode

./: .gitignore  get_input.py  pyproject.toml  template.py
2015/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2020/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2023/: 1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2023/03/: part1.py
2024/: 1.py  10.py  11.py  12.py  13.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2025/: 1.py  10.py  11.py  12.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
